Closed
Bug 1211511
Opened 10 years ago
Closed 10 years ago
Sound indicator is displayed on vk.com while nothing is causing sound
Categories
(Firefox :: Tabbed Browser, defect)
Firefox
Tabbed Browser
Tracking
()
VERIFIED
FIXED
Firefox 44
| Tracking | Status | |
|---|---|---|
| firefox44 | --- | verified |
People
(Reporter: arni2033, Assigned: baku)
References
()
Details
Attachments
(1 file)
|
13.78 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
STR: (Win7_64, Nightly 43, 32bit, ID 20150910030225, new profile, safe mode)
0. Open about:addons (Ctrl+Shift+A), disable Flash Plugin ("Never Activate")
1. Open https://vk.com/video211054116_167519691
2. Click video to play it [make sure the video starts playing and sound indicator is displayed]
3. Click outside of the video
Result: Video is closed, <video> element is deleted, but the sound indicator is still displayed
Expectations: Shound indicator should disappear, just like in Chrome
I *checked*: it always happen when I remove [src] of any <video> and then remove <video> element
Comment 1•10 years ago
|
||
Andrea, maybe this is an edge case that got missed ?
Flags: needinfo?(amarchesini)
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
| Assignee | ||
Comment 2•10 years ago
|
||
The bug here is that NotifyStartedPlaying and NotifyStoppedPlaying are inconsistent about the notification of playback. This happens because HasAudio() returns true and then false.
With this patch NotifyStoppedPlaying follows the notification playback flag of NotifyStartedPlaying.
Attachment #8670373 -
Flags: review?(roc)
Attachment #8670373 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 3•10 years ago
|
||
Comment 4•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 44
Comment 5•10 years ago
|
||
Verified fixed on latest Nightly 44.0a1 (buildID: 20151011030229).
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•