dom/audiochannel/AudioChannelAgent.h
@@ -64,6 +64,7 @@ private:
   int32_t mAudioChannelType;
   uint64_t mInnerWindowID;
   bool mIsRegToService;
+  bool mNotifyPlayback;
 };
 
 } // namespace dom
